# yyc-seg

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: data.yaml
docs/: 训练报告-2026-05-05.md  验证报告-2026-05-05.md
docs/superpowers/plans/: 2026-05-02-aero-engine-defect-detection-plan.md
docs/superpowers/specs/: 2026-05-02-aero-engine-defect-detection-design.md
docs/superpowers/specs/2026-05-defect-detection/: 问卷调查对话记录.md
src/: filter_dataset.py  predict.py  train.py
