[project]
name = "coal-seg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.11"
dependencies = [
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pycocotools>=2.0.11",
    "ultralytics==8.2.89",
]
